Fix searchbar focus loss and fix searchbar z-index

--- a/src/VisAQ.css
+++ b/src/VisAQ.css
@@ -1,3 +1,8 @@
+:root {
+    --legend-z-index: 1000;
+    --searchbar-z-index: 1001;
+}
+
 .light-theme {
     --main-page-color: #44c2d4;
     --primary-background-color: rgb(245, 245, 245);
