--- a/src/de/visaq/view/elements/map/Legend.css
+++ b/src/de/visaq/view/elements/map/Legend.css
@@ -11,6 +11,7 @@ body {
     background: var(--primary-background-color);
     box-shadow: 0 0 15px var(--box-shadow);
     border-radius: 5px;
+    z-index: var(--legend-z-index);
 }
 
 .legend i {
